--- a/demo/components/calendar.css
+++ b/demo/components/calendar.css
@@ -79,9 +79,9 @@
 .areaGrid {
   position: relative;
   top: 4em;
-  width: 100%;
+  width: 90%;
   height: 2em;
-  margin: 0;
+  margin: 0 auto;
   box-sizing: border-box;
   z-index: 0;
   border-top: 1px solid #d0d0d0;
